# personal-website

./: .contentful.json  .gitignore  Dockerfile  Makefile  README  README.md  app.py  dev-requirements.in  dev-requirements.txt  dev.sh  docker-compose.yml  gridsome.config.js  gridsome.server.js  nuxt.config.js  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  service-worker.js
.github/workflows/: docker-image.yml
components/: Card.vue  Cards.vue  CircleLinksContainer.vue  Footer.vue  LinkCircle.vue  Nav.vue  NavLink.vue  Particles.vue  Section.vue  SectionsBody.vue
docker/: app.dockerfile
js/: particle.js
layouts/: default.vue
pages/: about.vue  index.vue
pages/blog/: _id.vue  index.vue
pages/posts/: _id.vue  index.vue
plugins/: contentful.js
posts/: 20200621_New_Site.md  20210413_Looking_Back.md  20230826_habits.md
scss/1-global/: _1-global.scss  _breakpoints.scss  _constants.scss  _reset.scss  _text.scss
src/: app.py  main.js
src/.tmp/: Fa-Q18_19.json
src/components/: CircleLinksContainer.vue  Nav.vue  NavLink.vue  Particles.vue
src/crawler/: __init__.py  constants.py  tms_crawler.py  utility.py
src/layouts/: Default.vue
src/pages/: about.vue  index.vue  posts.vue
src/plugins/: contentful.js
src/python/: __init__.py  constants.py  tms_crawler.py  utility.py
src/store/: index.js
src/templates/: Post.vue
static/css/: main.css  (+4 more)
store/: index.js
templates/: 404.html  base.html  blog.html  blog_inner.html  index.html  nav.html  post.html  projects.html  rss.html
vue/: index.html  package.json
(+24 files in other folders)
