[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = ""
authors = ["John Zlotek <jzlotek@gmail.com>"]

[tool.poetry.scripts]
start = "app:main"

[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = ">=0.70.0"
uvicorn = ">=0.15.0"
loguru = ">=0.5.3"
Pygments = ">=2.10.0"
Jinja2 = ">=3.0.2"
markdown2 = "^2.4.8"

[tool.poetry.group.dev.dependencies]
jedi = ">=0.18.0"
black = ">=21.9b0"
pytest = ">=6.2.5"
isort = ">=5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
